--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "start": "gulp"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/middlebury/frontend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/middlebury/frontend/issues"
+  },
   "devDependencies": {
     "browser-sync": "^2.18.7",
     "gulp": "^3.9.1",
