--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babelify": "^7.3.0",
     "beeper": "^1.1.1",
     "browserify": "^14.0.0",
+    "del": "^2.2.2",
     "eslint": "^3.15.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-sass": "^3.1.0",
