--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "url": "https://github.com/middlebury/frontend/issues"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.7",
-    "gulp": "^3.9.1",
-    "gulp-twig": "^0.7.0",
     "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
     "beeper": "^1.1.1",
+    "browser-sync": "^2.18.7",
     "browserify": "^14.0.0",
     "del": "^2.2.2",
     "eslint": "^3.15.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-data": "^1.2.1",
+    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
+    "gulp-twig": "^0.7.0",
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8",
     "vinyl-buffer": "^1.0.0",
