--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,7 @@
 {
-  "env": {
-    "node": true,
-    "browser": true
-  },
+  "extends":"drupal",
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module"
-  },
-  "rules": {
-    "semi": 1,
-    "no-undef": 2,
-    "no-unused-vars": 1,
-    "no-const-assign": 2
   }
 }
