--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browserify": "^14.0.0",
     "del": "^2.2.2",
     "eslint": "^3.15.0",
+    "eslint-config-drupal": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-data": "^1.2.1",
