--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-twig": "^0.7.0",
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8",
+    "js-yaml": "^3.8.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^6.6.0"
