--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -7,6 +7,13 @@ site_nav:
       href: '#'
     items:
       - text: Cultural Fluency
+        items:
+          - text: sub nav item
+          - text: sub nav item
+          - text: sub nav item
+          - text: sub nav item
+          - text: sub nav item
+          - text: sub nav item
       - text: Immersive Learning
       - text: Holistic Analysis
       - text: Practical Innovation
