--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -159,24 +159,34 @@ homepage:
 
   projects:
     - title: Peru Field Work
+      featured: true
       image: http://placehold.it/500x375
       image_alt: alt text
-      summary: Students are applying policy-research concepts learned in the Field Methods and Policy and Data Analysis courses to the design of a country-specific, client specified field-research project.
+      blurb: Students are applying policy-research concepts learned in the Field Methods and Policy and Data Analysis courses to the design of a country-specific, client specified field-research project.
     - title: Nepal Data Analysis
       image: http://placehold.it/500x375
       image_alt: alt text
-      summary: A team of 15 students are using data- analytical techniques to assess the data they collected from three sites in Nepal.
+      blurb: A team of 15 students are using data- analytical techniques to assess the data they collected from three sites in Nepal.
     - title: MPA Students Survey Digital Media in Cuba
       image: http://placehold.it/500x375
       image_alt: alt text
-      summary: To support innovative analysis of ICT for development, students conduct 10 days of fieldwork in and around Havana
+      blurb: To support innovative analysis of ICT for development, students conduct 10 days of fieldwork in and around Havana
 
   leaders_in_the_field:
     - title: Institute Experts Contribute to Climate
       image: http://placehold.it/500x500
-      summary: Students are applying policy-research concepts learned in the Field Methods and Policy and Data Analysis courses to the design of a country-specific, client specified field-research project
+      blurb: Students are applying policy-research concepts learned in the Field Methods and Policy and Data Analysis courses to the design of a country-specific, client specified field-research project
     - title: “Romantic Computing” and the Future of Education
       image: http://placehold.it/500x500
-      summary: “Romantic computing” is not about dating sites like Tinder, Professor Gardner Campbell assured a bi- coastal audience at the Middlebury Institute in Monterey and Middlebury
+      blurb: “Romantic computing” is not about dating sites like Tinder, Professor Gardner Campbell assured a bi- coastal audience at the Middlebury Institute in Monterey and Middlebury
     - title: Institute Co-Hosts U.S.-China Conference on Arms Control
-      summary: Students are applying policy-research concepts learned in the Field Methods and Policy and Data Analysis courses to the design of a country-specific, client specified field-research project
+      featured: true
+      blurb: Students are applying policy-research concepts learned in the Field Methods and Policy and Data Analysis courses to the design of a country-specific, client specified field-research project
+
+global_projects:
+  - title: United Nations
+    blurb: Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim.
+  - title: Silicon Valley
+    blurb: Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim.
+  - title: Teach for America
+    blurb: Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim.
