--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-prettify": "^0.5.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-twig": "^0.7.0",
