--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "yargs": "^6.6.0"
   },
   "dependencies": {
-    "normalize.css": "^5.0.0"
+    "bootstrap": "4.0.0-alpha.6",
+    "normalize.css": "^5.0.0",
   }
 }
