--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "enquire.js": "^2.1.6",
-    "normalize.css": "^5.0.0",
+    "normalize.css": "^5.0.0"
   }
 }
