--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -212,13 +212,13 @@ homepage:
   leaders_in_the_field:
     - title: Institute Experts Contribute to Climate
       image: http://placehold.it/500x500
-      blurb: Students are applying policy-research concepts learned in the Field Methods and Policy and Data Analysis courses to the design of a country-specific, client specified field-research project
+      blurb: <p>Students are applying policy-research concepts learned in the Field Methods and Policy and Data Analysis courses to the design of a country-specific, client specified field-research project</p>
     - title: “Romantic Computing” and the Future of Education
       image: http://placehold.it/500x500
-      blurb: “Romantic computing” is not about dating sites like Tinder, Professor Gardner Campbell assured a bi- coastal audience at the Middlebury Institute in Monterey and Middlebury
+      blurb: <p>“Romantic computing” is not about dating sites like Tinder, Professor Gardner Campbell assured a bi- coastal audience at the Middlebury Institute in Monterey and Middlebury</p>
     - title: Institute Co-Hosts U.S.-China Conference on Arms Control
       featured: true
-      blurb: Students are applying policy-research concepts learned in the Field Methods and Policy and Data Analysis courses to the design of a country-specific, client specified field-research project
+      blurb: <p>Students are applying policy-research concepts learned in the Field Methods and Policy and Data Analysis courses to the design of a country-specific, client specified field-research project</p>
 
 global_projects:
   - title: United Nations
