--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "gulpfile.babel.js",
   "scripts": {
     "start": "gulp",
-    "build": "gulp --production",
+    "build": "gulp build --production",
+    "deploy": "npm run build && gulp deploy",
     "lint": "eslint src/**"
   },
   "repository": {
