--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build --production",
-    "deploy": "npm run build && gulp deploy",
+    "deploy": "gulp deploy",
     "lint": "eslint src/**"
   },
   "repository": {
