--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "enquire.js": "^2.1.6",
-    "normalize.css": "^5.0.0"
+    "normalize.css": "^5.0.0",
+    "swiper": "^3.4.2"
   }
 }
