wrap summary text in p tags since it will come from basic html content field

--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -172,11 +172,11 @@ programs:
 homepage:
   latest_news:
     - title: Undergraduate Interns Tackle Nonproliferation Issues
-      summary: The program aims to combat the spread of weapons of mass destruction
+      summary: <p>The program aims to combat the spread of weapons of mass destruction</p>
     - title: Undergraduate Interns Tackle Nonproliferation Issues
-      summary: The program aims to combat the spread of weapons of mass destruction
+      summary: <p>The program aims to combat the spread of weapons of mass destruction</p>
     - title: Alumni Play Important Role in Inauguration of First Female President of Taiwan
-      summary: “I can't express how proud I am to see our students perform so well and play a part in shaping this historic event in Taiwan.”
+      summary: <p>“I can't express how proud I am to see our students perform so well and play a part in shaping this historic event in Taiwan.”</p>
   upcoming_events:
     - date: Jul 12, 2016
       time: 1:00 PM
