--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
+    "gulp-svg-sprites": "^4.1.2",
     "gulp-twig": "^0.7.0",
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8",
