--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8",
     "js-yaml": "^3.8.2",
+    "slug": "^0.9.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^6.6.0"
