Corrected link to Main Areas of Focus Page

--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -226,7 +226,7 @@ footer_nav:
       - text: Leadership and Impact
         url: /institute/leadership-impact
       - text: Areas of Focus
-        url: /institute
+        url: /institute/areas-of-focus
       - text: Advancing Your Career
         url: /institute/student-services/advising-career-services
       - text: Academics
