--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-csscomb-lint": "^0.0.2",
+    "gulp-cssnano": "^2.1.2",
     "gulp-data": "^1.2.1",
     "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.2",
