--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-drupal": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-combine-mq": "^0.4.0",
     "gulp-csscomb-lint": "^0.0.2",
     "gulp-cssnano": "^2.1.2",
     "gulp-data": "^1.2.1",
