--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-prettify": "^0.5.0",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
+    "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-svg-sprites": "^4.1.2",
     "gulp-twig": "^0.7.0",
